@@ -30,7 +30,7 @@
 #Mellon the rights to redistribute these changes without encumbrance.
 #*/
 #
-#static char *rcsid = "$Header: /afs/cs/project/coda-src/cvs/coda/coda-src/scripts/createvol_rep,v 4.5 1998/01/20 20:53:08 braam Exp $";
+#static char *rcsid = "$Header: /afs/cs/project/coda-src/cvs/coda/coda-src/scripts/createvol_rep,v 4.6 1998/05/27 20:29:16 braam Exp $";
 #endif /*_BLURB_*/
 
 
@@ -71,6 +71,8 @@ set SERVERS=`awk '$1 ~ /^'$VSGADDR'$/ {print $2, $3, $4, $5, $6, $7, $8, $9}' /v
 echo Servers are \($SERVERS\)
 set NSERVERS=$#SERVERS
 
+
+
 # Validate the server list
 if ($NSERVERS == 0 || $NSERVERS > $MAXSERVERS) then
 	echo Specify 1 - $MAXSERVERS servers
@@ -78,7 +80,8 @@ if ($NSERVERS == 0 || $NSERVERS > $MAXSERVERS) then
 endif
 set N=0
 foreach SERVER ($SERVERS)
-	if ($SERVER != `awk ' $1 ~/^'$SERVER'$/  {print $1}' /vice/db/servers`) then
+	grep $SERVER /vice/db/servers > /dev/null 
+	if ( $? != 0 ) then
 		echo Server $SERVER not in servers file
 		exit
 	endif
