@@ -29,7 +29,7 @@ improvements or extensions that  they  make,  and  to  grant  Carnegie
 Mellon the rights to redistribute these changes without encumbrance.
 */
 
-static char *rcsid = "$Header: /afs/cs/project/coda-src/cvs/coda/coda-src/venus/vproc.h,v 4.18 1998/05/15 01:23:35 braam Exp $";
+static char *rcsid = "$Header: /afs/cs/project/coda-src/cvs/coda/coda-src/venus/vproc.h,v 4.19 1998/06/07 20:15:11 braam Exp $";
 #endif /*_BLURB_*/
 
 
@@ -248,7 +248,6 @@ class vproc : public olink {
     struct uarea u;
     unsigned idle : 1;
     unsigned interrupted : 1;
-    unsigned prefetch : 1;	/* For SETS-style prefetching */
     struct vcbevent *ve;
 
     vproc(char *, PROCBODY, vproctype, int =VPROC_DEFAULT_STACK_SIZE, int =LWP_NORMAL_PRIORITY);
